# aispeak-server-go/docs/swagger.json
@@ -196,7 +196,15 @@
                 },
                 "points": {
                     "type": "integer"
-                }
+                },
+                "ref_book_id": {
+                    "type": "string"
+                },
+                "ref_lesson_id": {
+                    "type": "integer"
+                },
+                "selected_sentence_ids": {},
+                "selected_word_ids": {}
             }
         },
         "controllers.CreateTaskRequest": {
@@ -381,7 +389,10 @@
                 "math_problem",
                 "science_experiment",
                 "history_question",
-                "art_assignment"
+                "art_assignment",
+                "pronunciation",
+                "sentence_repeat",
+                "quiz"
             ],
             "x-enum-comments": {
                 "ArtAssignment": "艺术作业",
@@ -390,8 +401,11 @@
                 "Dictation": "单词听写",
                 "HistoryQuestion": "历史问题",
                 "MathProblem": "数学题目",
+                "Pronunciation": "发音测评",
+                "Quiz": "测验",
                 "Reading": "句子跟读",
                 "ScienceExperiment": "科学实验",
+                "SentenceRepeat": "句子跟读",
                 "Spelling": "单词拼写",
                 "Translation": "翻译练习"
             },
@@ -405,7 +419,10 @@
                 "MathProblem",
                 "ScienceExperiment",
                 "HistoryQuestion",
-                "ArtAssignment"
+                "ArtAssignment",
+                "Pronunciation",
+                "SentenceRepeat",
+                "Quiz"
             ]
         }
     }
